simple clock improved

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div class="container">
       <div class="clock"></div>
     </div>
-    <script src="./js/clock.js" type="module"></script>
+    <script src="./js/clock-test.js" type="module"></script>
   </body>
 </html>
