finally making animation

--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
   </head>
   <body>
     <div class="container">
-      <div class="clock"></div>
+      <div class="clock">
+        <div class="hours">
+            <div class="hours__tens">
+            </div>
+      <div class="hours__ones"></div>
     </div>
-    <script src="./js/clock-test.js" type="module"></script>
+        <div class="minutes">
+            <div class="minutes__tens">
+            </div>
+      <div class="minutes__ones"></div>
+    </div>
+        <div class="seconds">
+            <div class="seconds__tens">
+            </div>
+      <div class="seconds__ones"></div>
+    </div>
+    </div>
+    <script src="./js/clockAnother.js" type="module"></script>
   </body>
 </html>
