--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
     <div class="container">
       <div class="clock">
         <div class="hours">
-            <div class="hours__tens">
-            </div>
-      <div class="hours__ones"></div>
-    </div>
+          <div class="hours__tens"></div>
+          <div class="hours__ones"></div>
+        </div>
         <div class="minutes">
-            <div class="minutes__tens">
-            </div>
-      <div class="minutes__ones"></div>
-    </div>
+          <div class="minutes__tens"></div>
+          <div class="minutes__ones"></div>
+        </div>
         <div class="seconds">
-            <div class="seconds__tens">
-            </div>
-      <div class="seconds__ones"></div>
+          <div class="seconds__tens"></div>
+          <div class="seconds__ones"></div>
+        </div>
+      </div>
     </div>
-    </div>
-    <script src="./js/clockAnother.js" type="module"></script>
+    <script src="./js/clock.js" type="module"></script>
   </body>
 </html>
