--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="clock">
-        <div class="hours">
+        <!-- <div class="hours">
           <div class="hours__tens"></div>
           <div class="hours__ones"></div>
         </div>
@@ -20,7 +20,7 @@
         <div class="seconds">
           <div class="seconds__tens"></div>
           <div class="seconds__ones"></div>
-        </div>
+        </div> -->
       </div>
     </div>
     <script src="./js/clock.js" type="module"></script>
